Increase nav size and contrast with header

--- a/styles.css
+++ b/styles.css
@@ -26,10 +26,6 @@ a {
   text-decoration: none;
 }
 
-a:focus {
-  outline: none !important;
-}
-
 form {
   background-color: rgba(255, 255, 255, .7);
   margin-bottom: 25px;
@@ -40,10 +36,6 @@ form {
 
 input[type="text"], input[type="number"], textarea {
   width: 100%;
-}
-
-input:focus {
-  outline: none!important;
 }
 
 button {
@@ -79,7 +71,7 @@ h4 {
 /********************************* HEADER *********************************/
 
 .header {
-  background-color: #333333;
+  background-color: #ffcccc;
   padding: 5px 25px;
   display: flex;
   flex-direction: column;
@@ -88,6 +80,7 @@ h4 {
 
 .hamburger {
   position: absolute;
+  font-size: 30px;
   top: 10px;
   left: 10px;
 }
